mod: 일부 엔티티 id 컬럼명 변경
#81